--- a/src/styls/temp.styl
+++ b/src/styls/temp.styl
@@ -6,6 +6,7 @@
   background linear-gradient(top left, green, skyblue)
 
 h1
-  font-size 6rem
-  color #fff
+  text-align center
+  font-size 8rem
+  color #000
   text-shadow 2px 2px 14px
