--- a/src/styls/temp.styl
+++ b/src/styls/temp.styl
@@ -4,9 +4,12 @@
   justify-content: center;
   height 100%
   background linear-gradient(top left, green, skyblue)
+  flex-direction column
 
 h1
   text-align center
   font-size 8rem
   color #000
-  text-shadow 2px 2px 14px
+  text-shadow 2px 2px 14px #fff
+#caption
+  font-size 2rem
