--- a/src/styls/temp.styl
+++ b/src/styls/temp.styl
@@ -10,6 +10,6 @@ h1
   text-align center
   font-size 8rem
   color #000
-  text-shadow 2px 2px 14px #fff
+  text-shadow 2px 2px 14px orange
 #caption
   font-size 2rem
