--- a/src/styls/temp.styl
+++ b/src/styls/temp.styl
@@ -13,3 +13,16 @@ h1
   text-shadow 2px 2px 14px orange
 #caption
   font-size 2rem
+.section
+    min-height 40rem
+    padding-top 4rem
+#section_1
+    background salmon
+#section_2
+    background olive
+#section_3
+    background teal
+#section_4
+    background maroon
+#section_5
+    background orange
