--- a/src/styls/navbar.styl
+++ b/src/styls/navbar.styl
@@ -2,7 +2,7 @@
   position fixed
   width 100%
   background skyblue
-  height 2rem
+  height 3rem
 
 .liner
   display flex
@@ -38,3 +38,18 @@
   background-color: #fff;
   margin: .3rem auto;
   width:85%;
+
+.responsive
+    display block
+    background yellow
+
+
+  // .visible
+  //   background:$special;
+  //   color:#fff;
+  //   display:block;
+	// text-align:right;
+	// float:right;
+	// margin:0;
+	// padding-top:2rem;
+	// width:100%;
