--- a/src/styls/navbar.styl
+++ b/src/styls/navbar.styl
@@ -43,7 +43,12 @@
     display block
     background yellow
 
+.show
+  display block
 
+
+.hide
+  display none
   // .visible
   //   background:$special;
   //   color:#fff;
