--- a/src/styls/temp.styl
+++ b/src/styls/temp.styl
@@ -8,11 +8,13 @@
 
 h1
   text-align center
-  font-size 8rem
+  font-size 5rem
   color #000
   text-shadow 2px 2px 14px orange
-#caption
-  font-size 2rem
+h2
+  font-size 3rem
+.tagline
+    font-size 2rem 
 .section
     min-height 40rem
     padding-top 4rem
