--- a/src/styls/navbar.styl
+++ b/src/styls/navbar.styl
@@ -6,40 +6,40 @@
   background transparent
   height 3rem
   transition all 600ms ease-in-out
-  ul 
-    li  
-      a  
-        color red
-        font-size 2rem 
+  ul
+    li
+      a
+        color #fff
+        font-size 2rem
 
  @media(min-width:780px)
   .navWrap
-    padding 2rem 4rem
+    padding 3rem 4rem
     position fixed
     width 100%
     background transparent
     height 3rem
     transition all 600ms ease-in-out
-    ul 
-      li  
-        a  
+    ul
+      li
+        a
           color #fff
-          font-size 2rem 
- 
-  .small
-    background #fff
-    padding 0
+          font-size 2rem
 
-    ul 
-      li  
-        a  
-          color silver
-          font-size 1.1rem 
+  .small
+    background rgba(0,0,0,0.5)
+    padding 1rem 0
+
+    ul
+      li
+        a
+          color #000
+          font-size 1.2rem
 
 .liner
   display flex
   justify-content space-between
-  background skyblue
+  background grey
   height 100%
   align-items center
   margin auto
@@ -55,14 +55,14 @@
         li
           display inline-block
           padding 0 .3rem
-          a          
+          a
             text-decoration none
 .logoWrap
     z-index 999
     font-size 1.5rem
     padding .3rem
     border 1px solid black
- 
+
 
 .menuIcon
   border-radius:.2rem;
@@ -90,18 +90,18 @@
       top 0
       left 0
       width 100%
-      background skyblue
+      background grey
       ul
           li
               padding-bottom 1rem
               a
                   text-decoration none
                   font-size 1.1rem
-                  
-                  padding-top 2rem
+
 
 
 .hide
   display none
 
-
+.active
+    border 2px solid #000
