--- a/src/styls/temp.styl
+++ b/src/styls/temp.styl
@@ -14,9 +14,9 @@ h1
 h2
   font-size 3rem
 .tagline
-    font-size 2rem 
+    font-size 2rem
 .section
-    min-height 40rem
+    height 100%
     padding-top 4rem
 #section_1
     background salmon
