--- a/src/styls/temp.styl
+++ b/src/styls/temp.styl
@@ -2,6 +2,7 @@
   display flex
   align-items center
   justify-content: center;
+  align-items center
   height 100%
   background linear-gradient(top left, green, skyblue)
   flex-direction column
@@ -16,8 +17,8 @@ h2
 .tagline
     font-size 2rem
 .section
-    height 100%
-    padding-top 4rem
+    min-height 100%
+    padding 4rem 1rem
 #section_1
     background salmon
 #section_2
