--- a/src/styls/global.styl
+++ b/src/styls/global.styl
@@ -6,3 +6,27 @@ html
   height 100%
 body
   height 100%
+img 
+  display block 
+  width 100%
+  height auto
+
+.title
+  font-size 4rem
+  color $val
+
+.tagline
+    font-size 1.4rem
+    color #fff
+    text-transform capitalize      
+.section-tagline
+  text-align center
+  font-size 1.4rem 
+  margin 2rem 0
+
+.biline
+  font-size 1.3rem
+  line-height 1.2
+  color #fff
+
+
