--- a/src/styls/section-3.styl
+++ b/src/styls/section-3.styl
@@ -1,7 +1,6 @@
 .gallery
     max-width 720px
     margin auto
-    border 3px solid #fff
     background #fff
 .main-img
 .main-img img
@@ -11,21 +10,86 @@
 .imgs img
     width 100%
 
-.imgs
-    display grid
-    grid-template-columns repeat(4,1fr)
-    grid-gap 5px
+// .imgs
+//     display grid
+//     grid-template-columns repeat(4,1fr)
+//     grid-gap 5px
+
+
+.gallery
+     max-width 960px
+     display grid
+     grid-template-columns repeat(4,1fr)
+     grid-template-rows 3
+     grid-gap .1rem
+     div:nth-child(1)
+        grid-column 1/5
+        grid-row 1
+     div:nth-child(2)
+        grid-column 1/2
+        grid-row 2       
+     div:nth-child(3)
+        grid-column 2/3
+        grid-row 2
+     div:nth-child(4)
+        grid-column 3/4
+        grid-row 2
+     div:nth-child(5)
+        grid-column 4/5
+        grid-row 2
+     div:nth-child(6)
+        grid-column 1/2
+        grid-row 3
+     div:nth-child(7)
+        grid-column 2/3
+        grid-row 3
+     div:nth-child(8)
+        grid-column 3/4
+        grid-row 3
+     div:nth-child(9)
+        grid-column 4/5
+        grid-row 3
++above(780px)
+    .gallery
+        grid-template-columns repeat(6,1fr)
+        grid-template-rows 4
+        max-width 1020px
+        div:nth-child(1)
+            grid-column 2/6
+            grid-row 1/5
+        div:nth-child(2)
+            grid-column 1/2
+            grid-row 1
+        div:nth-child(3)
+            grid-column 1/2
+            grid-row 2    
+        div:nth-child(4)
+            grid-column 1/2
+            grid-row 3
+        div:nth-child(5)
+            grid-column 1/2
+            grid-row 4
+        div:nth-child(6)
+            grid-column 6/7
+            grid-row 1
+        div:nth-child(7)
+            grid-column 6/7
+            grid-row 2    
+        div:nth-child(8)
+            grid-column 6/7
+            grid-row 3
+        div:nth-child(9)
+            grid-column 6/7
+            grid-row 4            
 
 @keyframes fadeIn {
-  to {
-    opacity: 1
+  from {
+     transform scale(0)
+    //  transform rotate(0deg)
   }
 }
 .fade-in {
-    opacity 0
+    transform scale(1)
+    // transform rotate(360deg)
     animation fadeIn 0.5s ease-in 1 forwards
 }
-.text
-    background-color: rgba(0,0,0,.5);
-    color: white;
-    width: 100%
