--- a/src/styls/footer.styl
+++ b/src/styls/footer.styl
@@ -3,9 +3,10 @@ footer
     flex-direction column
     justify-content center 
     align-items center
+    border-top 2px solid #fff
     color #fff
     padding 1rem
-    background complement($val)
+    background $val
     line-height 1.6
     a  
         padding-left 1rem
