--- a/src/styls/section-4.styl
+++ b/src/styls/section-4.styl
@@ -5,6 +5,16 @@
         flex-wrap wrap
         max-width 1280px
         margin auto
+        align-items stretch
+    .item:nth-child(2)
+        background $val
+        color #fff
+        padding 1rem
+        border solid .5rem complement($val)
+        p
+            font-size 1.4rem
+        h3 
+            color #fff
     .item
         width 100%
         margin auto
