--- a/src/styls/navbar.styl
+++ b/src/styls/navbar.styl
@@ -6,6 +6,7 @@
   background transparent
   height 3rem
   transition all 600ms ease-in-out
+  z-index 9
   ul
     li
       a
@@ -39,7 +40,7 @@
 .liner
   display flex
   justify-content space-between
-  background #fff
+  background linear-gradient(left,complement($val), $val)
   height 100%
   align-items center
   margin auto
@@ -88,25 +89,26 @@
 @media(max-width:960px)
     .show
       display block
+      opacity 1
       position fixed
       padding-top 3rem
+      transition all .5s
       top 0
       left 0
       width 100%
-      background #fff
+      background linear-gradient(left,complement($val), $val)
+
       ul
           li
               padding-bottom 1rem
               a
                   text-decoration none
                   font-size 1.1rem
-                  color $special
+                  color #fff
                   padding-left 1rem
+    .hide
+      // display none
+      opacity 0
 
+  
 
-
-.hide
-  display none
-
-.active
-    border 2px solid #000
