--- a/src/styls/section-1.styl
+++ b/src/styls/section-1.styl
@@ -1,7 +1,8 @@
 #section-1  
     article 
         max-width 1280px
-        margin auto 
+        margin auto
+
         +above(720px)
             display grid
             grid-template-columns repeat(2, 1fr)
@@ -78,5 +79,6 @@
         display flex
         flex-direction row
         justify-content space-around
+        align-items flex-end
         img 
-            width 30%
+            width 28%
