--- a/src/styls/section-5.styl
+++ b/src/styls/section-5.styl
@@ -1,9 +1,10 @@
 #section-5
     padding-top 0 
     background rgba($val,1)
-    color #ffffff
+    background linear-gradient(top,#fff, $val)
+    color complement($val)
     header 
-     background linear-gradient(left, $val, #fff, $val)
+     background transparent
 
      h2 
         text-shadow 0 0 12px #fff
@@ -11,16 +12,21 @@
     display none
 #map 
     width 100%
-    height 400px
+    height 100%
+    min-height 400px
 .wrapper
     display flex
     flex-direction row
     flex-wrap wrap
+    align-items stretch
+    max-width 1280px
+    margin auto
     .item
         width 100%
         padding 1rem
+
         +above(960px)
-            width 50%
+            width 48%
     .detail
         display flex
         flex-direction row
@@ -28,14 +34,17 @@
         align-items center
         justify-content center
         text-align center
-        padding-bottom 1.5rem
+        background rgba(255,255,255,0.3)
+        border .5rem solid rgba(255,255,255,0.4)
+        border-radius 1rem
+        margin 1rem 0        
         i  
             width 50%
             font-size 4rem
             color complement($val)
         p  
             width 100%
-            font-size 1.2rem
+            font-size 1.3rem
         +above(960px)
             i  
                 width 20%
@@ -51,6 +60,11 @@
         flex-wrap wrap
         justify-content space-between
         font-size 1.3rem
+        padding 1rem
+        background rgba(255,255,255,0.3)
+        border .5rem solid rgba(255,255,255,0.4)
+        border-radius 1rem
+        margin 1rem 0         
 
         input,textarea
             font-size 1.2rem
@@ -58,15 +72,23 @@
             width 100%
             margin-bottom 1rem
             border 3px solid complement($val)
-            border-radius .5rem      
+            border-radius .5rem 
+            background rgba(255,255,255,0.6)     
         .submit-btn 
             width 12rem
             border-radius .5rem
             background complement($val)
-            color #ffffff
+            color $val
             outline none 
             border 0
             padding 1rem
+            transition all 0.5s            
+        .submit-btn:hover
+            transform scale(1.1)
+            background $val
+            color complement($val)
+            transition all 0.5s
+        
         +above(960px)
             input
                 width 49%
