--- a/src/styls/section-5.styl
+++ b/src/styls/section-5.styl
@@ -35,7 +35,7 @@
         justify-content center
         text-align center
         background rgba(255,255,255,0.3)
-        border .5rem solid rgba(255,255,255,0.4)
+        border solid 2px complement($val)
         border-radius 1rem
         margin 1rem 0        
         i  
@@ -62,7 +62,7 @@
         font-size 1.3rem
         padding 1rem
         background rgba(255,255,255,0.3)
-        border .5rem solid rgba(255,255,255,0.4)
+        border solid 2px complement($val)
         border-radius 1rem
         margin 1rem 0         
 
