--- a/src/styls/sections.styl
+++ b/src/styls/sections.styl
@@ -1,5 +1,6 @@
 .section
     padding 4rem 1rem
+    border-bottom solid 2px complement($val)
     header  
         padding 2rem
         // box-shadow: 10px 10px 42px 9px rgba(128,107,0,1)
@@ -11,7 +12,7 @@
         text-align center
         text-transform uppercase
         font-family 'Times New Roman'
-        +below(600px)
+        +below(720px)
             font-size 2.5rem
     h3 
         font-size 1.4rem
