--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ footer {
 }
 footer a {
   padding-left: 1rem;
+  color: #c0c0c0;
 }
 * {
   margin: 0;
@@ -70,12 +71,8 @@ img {
   color: #fff;
 }
 #home {
-  background: -webkit-linear-gradient(left, #806b00, #001580);
-  background: -moz-linear-gradient(left, #806b00, #001580);
-  background: -o-linear-gradient(left, #806b00, #001580);
-  background: -ms-linear-gradient(left, #806b00, #001580);
-  background: linear-gradient(to right, #806b00, #001580);
-  padding-top: 4rem;
+  background: rgba(128,107,0,0);
+  padding-top: 0;
 }
 @media only screen and (max-width: 860px) {
   #home {
@@ -120,8 +117,15 @@ img {
 }
 .site-intro {
   width: 100%;
-  padding-left: 1rem;
+  padding: 0 1rem;
   margin: 2rem 0;
+}
+.site-intro .biline {
+  color: #001580;
+}
+.site-intro .tagline {
+  color: #806b00;
+  font-weight: bold;
 }
 @media only screen and (max-width: 850px) {
   .site-intro {
@@ -158,10 +162,32 @@ img {
   }
 }
 .site-img {
-  width: 80%;
-  -webkit-align-self: flex-end;
-  align-self: flex-end;
-  -ms-flex-item-align: end;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  background-image: url("./img/worker.png");
+  background-repeat: no-repeat;
+  -webkit-background-size: auto;
+  -moz-background-size: auto;
+  background-size: auto;
+  background-position: center;
+  background-color: rgba(255,255,255,0.8);
+  background-blend-mode: lighten;
 }
 @media only screen and (min-width: 860px) {
   .site-img {
@@ -169,10 +195,13 @@ img {
   }
 }
 .intro-ul {
-  margin: 2rem;
+  -webkit-align-self: center;
+  align-self: center;
+  -ms-flex-item-align: center;
   font-size: 1.5rem;
   list-style: none;
-  color: #fff;
+  color: #806b00;
+  font-weight: bold;
 }
 .site-logo {
   height: 2rem;
@@ -201,15 +230,16 @@ img {
   -o-transform: rotate(-10deg);
   -ms-transform: rotate(-10deg);
   transform: rotate(-10deg);
-  opacity: 0.5;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-  filter: alpha(opacity=50);
+}
+.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 .navWrap {
   padding: 0;
-  position: fixed;
   width: 100%;
-  background: transparent;
+  background: rgba(128,107,0,0.4);
   height: 3rem;
   -webkit-transition: all 600ms ease-in-out;
   -moz-transition: all 600ms ease-in-out;
@@ -224,10 +254,11 @@ img {
 }
 @media (min-width: 780px) {
   .navWrap {
-    padding: 3rem 0;
-    position: fixed;
+    padding: 2rem 0;
     width: 100%;
-    background: transparent;
+    background: #fff;
+    border-top: 2px solid #806b00;
+    border-bottom: 2px solid #806b00;
     height: 3rem;
     -webkit-transition: all 600ms ease-in-out;
     -moz-transition: all 600ms ease-in-out;
@@ -236,7 +267,7 @@ img {
     transition: all 600ms ease-in-out;
   }
   .navWrap ul li a {
-    color: #fff;
+    color: #001580;
     font-size: 1.3rem;
   }
   .small {
@@ -322,7 +353,8 @@ img {
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
-  color: #fff;
+  color: #001580;
+  font-weight: bold;
 }
 .menuIcon {
   border-radius: 0.2rem;
@@ -380,6 +412,9 @@ img {
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     filter: alpha(opacity=0);
   }
+}
+#section-1 {
+  padding-top: 1rem;
 }
 #section-1 article {
   max-width: 1280px;
@@ -483,10 +518,6 @@ img {
 #section-1 .subs img {
   width: 28%;
 }
-#section-2 {
-  background: rgba(128,107,0,0.2);
-header
-}
 #section-2 article {
   display: -webkit-box;
   display: -moz-box;
@@ -555,17 +586,10 @@ header
   background: #806b00;
   color: #001580;
 }
-#section-3 {
-  background: -webkit-linear-gradient(left, #001580, #806b00, #001580);
-  background: -moz-linear-gradient(left, #001580, #806b00, #001580);
-  background: -o-linear-gradient(left, #001580, #806b00, #001580);
-  background: -ms-linear-gradient(left, #001580, #806b00, #001580);
-  background: linear-gradient(to right, #001580, #806b00, #001580);
-}
 #section-3 header {
   background: #fff;
   width: 50%;
-  min-width: 300px;
+  min-width: 320px;
   border-radius: 50%;
   border: solid 4px #806b00;
 }
@@ -871,7 +895,7 @@ header
   justify-content: center;
   text-align: center;
   background: rgba(255,255,255,0.3);
-  border: 0.5rem solid rgba(255,255,255,0.4);
+  border: solid 2px #806b00;
   border-radius: 1rem;
   margin: 1rem 0;
 }
@@ -921,7 +945,7 @@ header
   font-size: 1.3rem;
   padding: 1rem;
   background: rgba(255,255,255,0.3);
-  border: 0.5rem solid rgba(255,255,255,0.4);
+  border: solid 2px #806b00;
   border-radius: 1rem;
   margin: 1rem 0;
 }
@@ -970,6 +994,7 @@ header
 }
 .section {
   padding: 4rem 1rem;
+  border-bottom: solid 2px #806b00;
 }
 .section header {
   padding: 2rem;
@@ -983,7 +1008,7 @@ header
   text-transform: uppercase;
   font-family: 'Times New Roman';
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 720px) {
   .section h2 {
     font-size: 2.5rem;
   }
