--- a/src/styls/footer.styl
+++ b/src/styls/footer.styl
@@ -6,7 +6,7 @@ footer
     border-top 2px solid #fff
     color #fff
     padding 1rem
-    background $val
+    background complement($val)
     line-height 1.6
     a  
         padding-left 1rem
