--- a/src/styls/logo.styl
+++ b/src/styls/logo.styl
@@ -1,17 +1,17 @@
 .site-logo
     height 2rem
     max-width 50%
-    margin  auto
-    +above(860px)
+    margin 2rem auto
+    +above(720px)
         display none
 
 .nav-logo
     height 2rem
     display none
     padding-right 1rem
-    +above(860px)
+    +above(720px)
         display block
 .section-logo
     height 2rem
-    transform rotate(-10deg)
+    // transform rotate(-10deg)
     
