--- a/src/styls/sections.styl
+++ b/src/styls/sections.styl
@@ -1,6 +1,6 @@
 .section
     padding 4rem 1rem
-    border-bottom solid 2px complement($val)
+    // border-bottom solid 1px complement($val)
     header  
         padding 2rem
         // box-shadow: 10px 10px 42px 9px rgba(128,107,0,1)
