--- a/src/styls/contact.styl
+++ b/src/styls/contact.styl
@@ -1,8 +1,8 @@
-#section-5
+#contact
     padding-top 0 
-    background rgba($val,1)
-    background linear-gradient(top,#fff, $val)
-    color complement($val)
+
+    // background linear-gradient(top,#fff, complement($val))
+    color $val
     header 
      background transparent
 
@@ -35,8 +35,9 @@
         justify-content center
         text-align center
         background rgba(255,255,255,0.3)
-        border solid 2px complement($val)
-        border-radius 1rem
+        box-shadow 0 0 8px rgba(complement($val),.5)
+        // border solid 2px complement($val)
+        // border-radius 1rem
         margin 1rem 0        
         i  
             width 50%
@@ -62,17 +63,24 @@
         font-size 1.3rem
         padding 1rem
         background rgba(255,255,255,0.3)
-        border solid 2px complement($val)
-        border-radius 1rem
-        margin 1rem 0         
+        box-shadow 0 0 8px rgba(complement($val),.5)
+        // border solid 2px complement($val)
+        // border-radius 1rem
+        margin 1rem 0
+        h4 
+            width 100%
+            text-align center 
+            margin-bottom 1rem
+            font-size 2rem
+            font-weight 300         
 
         input,textarea
             font-size 1.2rem
             padding .2rem
             width 100%
             margin-bottom 1rem
-            border 3px solid complement($val)
-            border-radius .5rem 
+            box-shadow 0 0 8px rgba(complement($val),.5)
+            // border-radius .5rem 
             background rgba(255,255,255,0.6)     
         .submit-btn 
             width 12rem
