--- a/src/styls/gallery.styl
+++ b/src/styls/gallery.styl
@@ -1,11 +1,5 @@
-#section-3  
-    
-    header
-        background #fff
-        width 50%
-        min-width 320px
-        border-radius 50%
-        border solid 4px complement($val)
+#gallery 
+
 .gallery
     max-width 720px
     margin auto
@@ -17,13 +11,6 @@
     width 100%
 .imgs img
     width 100%
-
-// .imgs
-//     display grid
-//     grid-template-columns repeat(4,1fr)
-//     grid-gap 5px
-
-
 .gallery
      max-width 960px
      display grid
