--- a/src/styls/projects.styl
+++ b/src/styls/projects.styl
@@ -1,4 +1,4 @@
-#section-1 
+#projects 
     padding-top 1rem 
     article 
         max-width 1280px
@@ -45,16 +45,9 @@
             grid-column 13/17
             grid-row 2
         .item:nth-child(4)
-            grid-column 2/6
+            grid-column 1/6
             grid-row 3
             padding 0
-            // display flex
-            // flex-direction row
-            // .img
-            //     width 50%
-            //     padding-right 1rem
-            // .text
-            //     width 50%
 
         .item:nth-child(5)
             grid-column 7/11
@@ -67,7 +60,7 @@
             // .text
             //     width 50%            
         .item:nth-child(6)
-            grid-column 12/16
+            grid-column 12/17
             grid-row 3
             // display flex 
             // flex-direction row
