--- a/src/styls/contact.styl
+++ b/src/styls/contact.styl
@@ -35,7 +35,7 @@
         justify-content center
         text-align center
         background rgba(255,255,255,0.3)
-        box-shadow 0 0 8px rgba(complement($val),.5)
+        // box-shadow 0 0 8px rgba(complement($val),.5)
         // border solid 2px complement($val)
         // border-radius 1rem
         margin 1rem 0        
@@ -80,7 +80,7 @@
             width 100%
             margin-bottom 1rem
             box-shadow 0 0 8px rgba(complement($val),.5)
-            // border-radius .5rem 
+            border none 
             background rgba(255,255,255,0.6)     
         .submit-btn 
             width 12rem
