--- a/src/styls/sections.styl
+++ b/src/styls/sections.styl
@@ -1,5 +1,5 @@
 .section
-    padding 4rem 1rem
+    padding 4rem 0
     // border-bottom solid 1px complement($val)
     header  
         padding 2rem
@@ -25,6 +25,7 @@
     p  
         font-size 1.1rem
         line-height 1.4
+        padding .5rem 1rem
 
     header p
         text-align center 
